--- a/css/style.css
+++ b/css/style.css
@@ -946,6 +946,13 @@ background-color: #ca2c37;
   text-transform: uppercase;
   border-radius: 3px;
 }
+.button-au:hover,
+.button-au:focus {
+  background-color: #ca2c37;
+}
+.button-au:active {
+  background-color: #ba2732;
+}
 .button-detail {
   padding:11px 40px;
 }
@@ -1008,6 +1015,7 @@ background-color: #ca2c37;
 .footer-up-item a:hover,
 .footer-up-item a:focus {
   box-shadow: 0 1px #fff, 0 2px 0 #4a586f;
+  outline: none;
 }
 .footer-up-item a:active {
   color:#929caa;
@@ -1034,6 +1042,7 @@ background-color: #ca2c37;
 .footer-down-item a:hover,
 .footer-down-item a:focus {
   box-shadow: 0 1px 0 0 #e6c07c, 0 2px 0 #4c5461;
+  outline: none;
 }
 .footer-down-item a:active {
   box-shadow: none;
@@ -1070,6 +1079,7 @@ background-color: #ca2c37;
 .social-btn:active,
 .social-btn:focus {
   background-color: #ee3643;
+  outline: none;
 }
 .social-btn-vk {
   background-image: url(../img/icon-vk.svg);
@@ -1103,6 +1113,11 @@ background-color: #ca2c37;
 .dev-link:hover,
 .dev-link:focus {
   box-shadow: 0 1px 0 #515253, 0 2px 0 #bda06f;
+  outline: none;
+}
+.dev-link:active {
+  color:#ee3643;
+  box-shadow:none;
 }
 .user-name {
   font-size:21px;
